# pycycle

./: .gitignore  README.md  pyproject.toml  search_rrl_fink.py  setup.py  tutorial.ipynb
notebooks/: fink_rrl_fit.ipynb  lsdb_lsst_pipeline.ipynb  template_fitting.ipynb  tutorial.ipynb
psearch/: __init__.py  core.py  lafler_kinman.py  plotting.py  results.py  scargle.py
psearch/_ext/: _psearch_c.c  _psearch_c.pyx  scargle_fast_c.c
psearch/utils/: utils.py
pycycle/: __init__.py  core.py  lafler_kinman.py  lsdb_utils.py  periodogram.py  plotting.py  results.py  scargle.py  stats.py  template_fit.py  templates.py
pycycle/_ext/: .fuse_hidden0026f5500001e4b1  _psearch_c.c  _pycycle_c.c  _pycycle_c.pyx  pycycle_py_c.c  template_fit_c.c  template_fit_c.pyx
pycycle/utils/: utils.py
template_diversity/: analyze.py  recovery_parallel.py  report.md  summary.ipynb  two_stage_test.py
tests/: test_core.py  test_lsdb_utils.py  test_results.py  test_scargle.py  test_template_fit.py
