[build-system]
requires = ["setuptools>=61", "Cython>=3", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "pycycle"
version = "0.24.0"
description = "Hybrid Lomb-Scargle / Lafler-Kinman period finder for multiband variable star light curves"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "astropy",
    "matplotlib",
]

[project.optional-dependencies]
fast = ["numba"]
dev = ["pytest", "Cython>=3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pycycle*"]

[tool.setuptools.package-data]
"pycycle.data" = ["*.tab"]
